--- a/design.css
+++ b/design.css
@@ -27,7 +27,7 @@ time, mark, audio, video
 .blackbar 
 {
 	background-color: black;
-	font-family: "Arimo";
+	font-family: "Lobster";
 	font-size: 40px;
 	color: white;
 	text-align: center;
@@ -57,7 +57,7 @@ body
 	padding: 0.5em 2.5em;
 	margin-left: 5px;
 	bottom: 35vh;
-	left: 50vh;
+	left: 30vh;
 	transition-property: width, height;
 	transition-duration: 1s;
 	transition-timing-function: linear;
