--- a/design.css
+++ b/design.css
@@ -57,7 +57,7 @@ body
 	position: relative;
 	padding: 0.5em 2.5em;
 	margin-left: 5px;
-	bottom: 45vh;
+	bottom: 30vh;
 	left: 30vh;
 	transition: color 0.5s ease, border-color 0.5s ease;
 }
@@ -75,9 +75,9 @@ body
 	border: solid white 2px;
 	box-sizing: border-box;
 	font-size: 25px;
-	position: relative;
+	position: fixed;
 	padding: 0.5em 2.5em;
-	bottom: 50vh;
+	bottom: 36vh;
 	transition: color 0.5s ease, border-color 0.5s ease;
 	left: 35%;
 	background-image: url('imgs/discord.png');
