--- a/design.css
+++ b/design.css
@@ -24,7 +24,7 @@ time, mark, audio, video
 	font: inherit;
 	vertical-align: baseline;
 }
-.blackbar 
+/*.blackbar 
 {
 	background-color: black;
 	font-family: "Lobster";
@@ -33,17 +33,16 @@ time, mark, audio, video
 	text-align: center;
 	width: 100%;
 	
-}
+}*/
 body
 {
 	background-color: black;
 	width: 100%;
+	height: 100%
 }
 .bgimg
 {
 	width: 100%;
-	border-radius: 40%;
-	opacity: 0.5;
 }
 .linkrefs
 {
@@ -58,7 +57,7 @@ body
 	position: relative;
 	padding: 0.5em 2.5em;
 	margin-left: 5px;
-	bottom: 30vh;
+	bottom: 27vh;
 	left: 40vh;
 	transition: color 0.5s ease, border-color 0.5s ease;
 	text-shadow: 2px 2px black;
@@ -79,7 +78,7 @@ body
 	font-size: 25px;
 	position: relative;
 	padding: 0.5em 2.5em;
-	bottom: 35vh;
+	bottom: 32vh;
 	transition: color 0.5s ease, border-color 0.5s ease;
 	left: 35%;
 	background-image: url('imgs/discord.png');
@@ -96,12 +95,11 @@ body
 }
 .copyright
 {
-	height: 35px;
+	height: 23px;
 	background-color: black;
-	width: 80%;
-	position: fixed;
-	bottom: 0%;
-	left: 10%;
+	width: 100%;
+	position: static;
+	bottom: 5%;
 }
 .container
 {
@@ -111,10 +109,8 @@ body
 .fottext
 {
 	text-align: center;
-	margin-top: 4px;
 	width: 100%;
 	color: white;
 	font-family: "arimo";
 	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-
 }
